--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
 "image":"https://i.imgur.com/uS7b114.jpg",
 "link":"http://smstv.live/t5UxmR6uUD/t5UxmR6uUD/92866.m3u8"},
 
-{"name":"Bein Xtra", "image":"https://i.imgur.com/Xd5Yyuu.jpg", "link":"https://i.mjh.nz/PlutoTV/62b97ef310e33f0007eea65f-alt.m3u8"}
+{"name":"Bein Xtra", "image":"https://i.imgur.com/Xd5Yyuu.jpg", "link":"https://i.mjh.nz/PlutoTV/62b97ef310e33f0007eea65f-alt.m3u8"},
+
+{"name":"nova2",
+"image":"https://i.imgur.com/dCYVN23.jpg",
+"link":"http://185.188.188.235/live/novasport2/playlist.m3u8"},
+
+{"name":"UFC Net", "image":"https://i.imgur.com/suyviX6.jpg", "link":"https://stream.ads.ottera.tv/cl/29fmbD4wgol0FelXaMeAw/854x480_550000_3_f.m3u8"}
 ]
