--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
 "image":"https://i.imgur.com/dCYVN23.jpg",
 "link":"http://185.188.188.235/live/novasport2/playlist.m3u8"},
 
-{"name":"UFC Net", "image":"https://i.imgur.com/suyviX6.jpg", "link":"https://stream.ads.ottera.tv/cl/29fmbD4wgol0FelXaMeAw/854x480_550000_3_f.m3u8"}
+{"name":"UFC Net", "image":"https://i.imgur.com/suyviX6.jpg", "link":"https://stream.ads.ottera.tv/cl/29fmbD4wgol0FelXaMeAw/854x480_550000_3_f.m3u8"},
+
+{"name":"Golf", "image":"https://i.imgur.com/04Ao4HK.jpg", "link":"http://162.250.201.58:6211/pk/ONEGOLF/index.m3u8"}
 ]
