--- a/index.html
+++ b/index.html
@@ -8,32 +8,22 @@
 {"name":"CNA", "image":"https://i.imgur.com/MXuh6GY.jpg", "link":"https://d2e1asnsl7br7b.cloudfront.net/7782e205e72f43aeb4a48ec97f66ebbe/index.m3u8"}, 
 {"name":"Euro", "image":"https://i.imgur.com/d5SiE1V.jpg", "link":"https://euronews-euronews-world-1-au.samsung.wurl.com/manifest/playlist.m3u8"}, 
 {"name":"nasa", "image":"https://i.imgur.com/HPPGpvK.jpg", "link":"https://ntv1.akamaized.net/hls/live/2014075/NASA-NTV1-HLS/master_2000.m3u8"}, 
+{"name":"IndiaToday", "image":"https://i.imgur.com/n5xTo4H.jpg", "link":"https://indiatodaylive.akamaized.net/hls/live/2014320/indiatoday/indiatodaylive/playlist.m3u8"}, 
+{"name":"India tv", "image":"https://i.imgur.com/Zcst3m2.jpg", "link":"https://indtv-pull.secure.footprint.net/indtv/stream.m3u8"}, 
 {"name":"skynew", "image":"https://i.imgur.com/7vgFl7T.jpg", "link":"https://d2gjhy8g9ziabr.cloudfront.net/v1/master/3fec3e5cac39a52b2132f9c66c83dae043dc17d4/prod-samsungtvplus-stitched/samsungtvplus_us_skynewsamericas_001.m3u8"}, 
 {"name":"bbcnew", "image":"https://i.imgur.com/Bl8Br5b.jpg", "link":"http://bananatv.org:25461/play/dEDyyGS4i_lsegerhsnhJX1Ev41_48OjhQkg7xGs6pM/.m3u8"},
 {"name":"Trtword", "image":"https://i.imgur.com/UatE5Aj.jpg", "link":"https://tv-trtworld.live.trt.com.tr/master.m3u8"}, 
 {"name":"Sonybbc", "image":"https://i.imgur.com/Oe15l9z.jpg", "link":"https://lin-gd-001-cf.slivcdn.com/out/v1/25027865fc9548f4928ca62a36dda585/master.m3u8?hdnea=st=1696942769~exp=1696943069~acl=*~id=fd54f610-02f9-4e41-8a71-b709bebc451e~hmac=92bf1bb7f7f1cde8073357de15d16ef909f39bfb68d80bffc2264fe59a3a1a56&originpath=/linear/hls/pb/event/6bVWYIKGS0CIa-cOpZZJPQ/stream/af7d0959-4b48-4802-825c-0f914fe2cd39:TPE2/master.m3u8"},
 {"name":"Pakistan", "image":"https://i.imgur.com/8bL3jwP.jpg", "link":"https://livecdn.live247stream.com/discoverpakistan/tapmad/playlist.m3u8"},
 {"name":"Tennis", "image":"https://i.imgur.com/U7QBSRj.jpg", "link":"https://tennischannel-intl-samsung-uk.amagi.tv/playlist720_p.m3u8"}, 
-
 {"name":"Sony 1", "image":"https://i.imgur.com/x5Wto4b.jpg", "link":"https://dai.google.com/linear/hls/event/6WhVNGKTRXyu588zZv1Lkg/master.m3u8"}, 
-
 {"name":"Sony 2", "image":"https://i.imgur.com/CQ8NZTv.jpg", "link":"https://dai.google.com/linear/hls/event/LK-ik89MQIi_pWBbg74KNQ/master.m3u8"}, 
-
 {"name":"Sony 5", "image":"https://i.imgur.com/Lw1Enwp.jpg", "link":"https://dai.google.com/linear/hls/event/r-eLp41YTHWTagvQSXFtAQ/master.m3u8"}, 
-
 {"name":"Dubai Sport", "image":"https://i.imgur.com/Qy0Qgkg.jpg", "link":"https://dmitwlvvll.cdn.mangomolo.com/dubaisportshd/smil:dubaisportshd.smil/index.m3u8"}, 
-
- {"name":"Ztenis",
-"image":"https://i.imgur.com/uS7b114.jpg",
-"link":"http://smstv.live/t5UxmR6uUD/t5UxmR6uUD/92866.m3u8"},
-
+{"name":"Ztenis","image":"https://i.imgur.com/uS7b114.jpg","link":"http://smstv.live/t5UxmR6uUD/t5UxmR6uUD/92866.m3u8"},
 {"name":"Bein Xtra", "image":"https://i.imgur.com/Xd5Yyuu.jpg", "link":"https://i.mjh.nz/PlutoTV/62b97ef310e33f0007eea65f-alt.m3u8"},
-
-{"name":"nova2",
-"image":"https://i.imgur.com/dCYVN23.jpg",
+{"name":"nova2","image":"https://i.imgur.com/dCYVN23.jpg",
 "link":"http://185.188.188.235/live/novasport2/playlist.m3u8"},
-
 {"name":"UFC Net", "image":"https://i.imgur.com/suyviX6.jpg", "link":"https://stream.ads.ottera.tv/cl/29fmbD4wgol0FelXaMeAw/854x480_550000_3_f.m3u8"},
-
 {"name":"Golf", "image":"https://i.imgur.com/04Ao4HK.jpg", "link":"http://162.250.201.58:6211/pk/ONEGOLF/index.m3u8"}
 ]
