--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 {"name":"nasa", "image":"https://i.imgur.com/HPPGpvK.jpg", "link":"https://ntv1.akamaized.net/hls/live/2014075/NASA-NTV1-HLS/master_2000.m3u8"}, 
 {"name":"IndiaToday", "image":"https://i.imgur.com/n5xTo4H.jpg", "link":"https://indiatodaylive.akamaized.net/hls/live/2014320/indiatoday/indiatodaylive/playlist.m3u8"}, 
 {"name":"India tv", "image":"https://i.imgur.com/Zcst3m2.jpg", "link":"https://indtv-pull.secure.footprint.net/indtv/stream.m3u8"}, 
+{"name":"NBC new", "image":"https://i.imgur.com/VHJGEKj.jpg", "link":"http://bananatv.org:25461/live/bananatv/bananatv/70.m3u8"}, 
 {"name":"skynew", "image":"https://i.imgur.com/7vgFl7T.jpg", "link":"https://d2gjhy8g9ziabr.cloudfront.net/v1/master/3fec3e5cac39a52b2132f9c66c83dae043dc17d4/prod-samsungtvplus-stitched/samsungtvplus_us_skynewsamericas_001.m3u8"}, 
 {"name":"bbcnew", "image":"https://i.imgur.com/Bl8Br5b.jpg", "link":"http://bananatv.org:25461/play/dEDyyGS4i_lsegerhsnhJX1Ev41_48OjhQkg7xGs6pM/.m3u8"},
 {"name":"Trtword", "image":"https://i.imgur.com/UatE5Aj.jpg", "link":"https://tv-trtworld.live.trt.com.tr/master.m3u8"}, 
