--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 {"name":"Bein Xtra", "image":"https://i.imgur.com/Xd5Yyuu.jpg", "link":"https://i.mjh.nz/PlutoTV/62b97ef310e33f0007eea65f-alt.m3u8"},
 {"name":"nova2","image":"https://i.imgur.com/dCYVN23.jpg","link":"http://185.188.188.235/live/novasport2/playlist.m3u8"},
 {"name":"UFC Net", "image":"https://i.imgur.com/suyviX6.jpg", "link":"https://stream.ads.ottera.tv/cl/29fmbD4wgol0FelXaMeAw/854x480_550000_3_f.m3u8"},
+{"name":"Sky golf", "image":"https://i.imgur.com/tqGdIaD.jpg", "link":"http://89.187.167.92:80/live.ts?channelId=147&deviceUser=jeff1&devicePass=jeff1&uid=21890.m3u8"}, 
 {"name":"Golf", "image":"https://i.imgur.com/04Ao4HK.jpg", "link":"http://162.250.201.58:6211/pk/ONEGOLF/index.m3u8"}
 ]
