--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 [ {"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
-{"name":"love 4k", "image":"https://i.imgur.com/Od0g4Lj.jpg", "link":"http://bananatv.org:25461/live/bananatv/bananatv/53.m3u8"}, 
+{"name":"love 4k", "image":"https://i.imgur.com/Od0g4Lj.jpg", "link":"http://bananatv.org:25461/live/premium/banana/53.ts"}, 
 {"name":"wild", "image":"https://i.imgur.com/D35xJoC.jpg", "link":"http://185.188.188.235/live/natgeowild/playlist.m3u8"},
 {"name":"animplan", "image":"https://i.imgur.com/4F0ogJ5.jpg", "link":"http://bananatv.org:25461/live/premium/banana/54.ts"},
 {"name":"Thebe", "image":"https://i.imgur.com/Du2zqkX.jpg", "link":"https://live.lwcdn.com/live/amlst:ALH8QFrg_all/playlist.m3u8"},
