--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 [ {"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
+{"name":"Real wild", "image":"https://i.imgur.com/x26Xweo.jpg", "link":"http://bananatv.org:25461/live/premium/banana/109.ts"},
 {"name":"NGO", "image":"https://i.imgur.com/tplhIxJ.jpg", "link":"http://bananatv.org:25461/live/premium/banana/3330.ts"}, 
 {"name":"love 4k", "image":"https://i.imgur.com/Od0g4Lj.jpg", "link":"http://bananatv.org:25461/live/premium/banana/53.ts"}, 
 {"name":"wild", "image":"https://i.imgur.com/D35xJoC.jpg", "link":"http://185.188.188.235/live/natgeowild/playlist.m3u8"},
