--- a/index.html
+++ b/index.html
@@ -21,12 +21,4 @@
 {"name":"nova2","image":"https://i.imgur.com/dCYVN23.jpg","link":"http://185.188.188.235/live/novasport2/playlist.m3u8"},
 {"name":"UFC Net", "image":"https://i.imgur.com/suyviX6.jpg", "link":"https://stream.ads.ottera.tv/cl/29fmbD4wgol0FelXaMeAw/854x480_550000_3_f.m3u8"},
 {"name":"Sky golf", "image":"https://i.imgur.com/tqGdIaD.jpg", "link":"http://89.187.167.92:80/live.ts?channelId=147&deviceUser=jeff1&devicePass=jeff1&uid=21890.m3u8"}, 
-{"name":"Golf", "image":"https://i.imgur.com/04Ao4HK.jpg", "link":"http://162.250.201.58:6211/pk/ONEGOLF/index.m3u8"},
-{"name":"Real wild", "image":"https://i.imgur.com/x26Xweo.jpg", "link":"http://bananatv.org:25461/live/premium/banana/109.ts"},
-{"name":"NGO", "image":"https://i.imgur.com/tplhIxJ.jpg", "link":"http://bananatv.org:25461/live/premium/banana/3330.ts"}, 
-{"name":"love 4k", "image":"https://i.imgur.com/Od0g4Lj.jpg", "link":"http://bananatv.org:25461/live/premium/banana/53.ts"},
-{"name":"animplan", "image":"https://i.imgur.com/4F0ogJ5.jpg", "link":"http://bananatv.org:25461/live/premium/banana/54.ts"},
-{"name":"NHK", "image":"https://i.imgur.com/3lGqjav.jpg", "link":"http://bananatv.org:25461/live/bananatv/bananatv/71.m3u8"},
-{"name":"NBC new", "image":"https://i.imgur.com/VHJGEKj.jpg", "link":"http://bananatv.org:25461/live/bananatv/bananatv/70.m3u8"}, 
-{"name":"bbcnew", "image":"https://i.imgur.com/Bl8Br5b.jpg", "link":"http://bananatv.org:25461/play/dEDyyGS4i_lsegerhsnhJX1Ev41_48OjhQkg7xGs6pM/.m3u8"}
-]
+{"name":"Golf", "image":"https://i.imgur.com/04Ao4HK.jpg", "link":"http://162.250.201.58:6211/pk/ONEGOLF/index.m3u8"}]
