--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 [ {"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
+{"name":"discover-HD", "image":"https://i.imgur.com/0VtMkEm.jpg", "link":"http://103.186.77.21:8000/play/a040/index.m3u8"}, 
 {"name":"wild", "image":"https://i.imgur.com/D35xJoC.jpg", "link":"http://185.188.188.235/live/natgeowild/playlist.m3u8"},
 {"name":"BBC NEW", "image":"https://i.imgur.com/Bl8Br5b.jpg", "link":"http://103.186.77.21:8000/play/a03q/index.m3u8"}, 
 {"name":"CNN", "image":"https://i.imgur.com/AL4lrxk.jpg", "link":"http://103.186.77.21:8000/play/a03p/index.m3u8"}, 
