--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 {"name":"Sonybbc", "image":"https://i.imgur.com/Oe15l9z.jpg", "link":"https://lin-gd-001-cf.slivcdn.com/out/v1/25027865fc9548f4928ca62a36dda585/master.m3u8?hdnea=st=1696942769~exp=1696943069~acl=*~id=fd54f610-02f9-4e41-8a71-b709bebc451e~hmac=92bf1bb7f7f1cde8073357de15d16ef909f39bfb68d80bffc2264fe59a3a1a56&originpath=/linear/hls/pb/event/6bVWYIKGS0CIa-cOpZZJPQ/stream/af7d0959-4b48-4802-825c-0f914fe2cd39:TPE2/master.m3u8"},
 {"name":"Pakistan", "image":"https://i.imgur.com/8bL3jwP.jpg", "link":"https://livecdn.live247stream.com/discoverpakistan/tapmad/playlist.m3u8"},
 {"name":"Tennis", "image":"https://i.imgur.com/U7QBSRj.jpg", "link":"https://tennischannel-intl-samsung-uk.amagi.tv/playlist720_p.m3u8"}, 
+{"name":"Sport18HD", "image":"https://i.imgur.com/BeRJcHC.jpg", "link":"http://prod-ent-live-gm.jiocinema.com/bpk-tv/Sports18_1_HD_voot_MOB/Fallback/index.m3u8"}, 
 {"name":"Sony 1", "image":"https://i.imgur.com/x5Wto4b.jpg", "link":"https://dai.google.com/linear/hls/event/6WhVNGKTRXyu588zZv1Lkg/master.m3u8"}, 
 {"name":"Sony 2", "image":"https://i.imgur.com/CQ8NZTv.jpg", "link":"https://dai.google.com/linear/hls/event/LK-ik89MQIi_pWBbg74KNQ/master.m3u8"}, 
 {"name":"Sony 5", "image":"https://i.imgur.com/Lw1Enwp.jpg", "link":"https://dai.google.com/linear/hls/event/r-eLp41YTHWTagvQSXFtAQ/master.m3u8"}, 
