--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-[{"name":"ANIMAL PLANET", "image":"https://i.imgur.com/Ad6n0UY.jpg", "link":"http://mn.appserv19.xyz:2095/Xplus-1-8IWNhpeUNI/rJk55mLiae/61.m3u8"},
-{"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
+[{"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
 {"name":"discover-HD", "image":"https://i.imgur.com/0VtMkEm.jpg", "link":"http://103.186.77.21:8000/play/a040/index.m3u8"}, 
 {"name":"CNN", "image":"https://i.imgur.com/AL4lrxk.jpg", "link":"http://103.186.77.21:8000/play/a03p/index.m3u8"}, 
 {"name":"Thebe", "image":"https://i.imgur.com/Du2zqkX.jpg", "link":"https://live.lwcdn.com/live/amlst:ALH8QFrg_all/playlist.m3u8"},
