--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-[{"name":"Bein Sport 2 THI", "image":"https://i.imgur.com/TcNCHby.jpg", "link":"https://ctrl.laotv.la/live/Bsport2/index.m3u8"},
+[{"name":"Ture Sport 3", "image":"https://i.imgur.com/oXcO0hg.jpg", "link":"https://ctrl.laotv.la/live/TrueSport3/index.m3u8"},
+{"name":"Bein Sport 2 THI", "image":"https://i.imgur.com/TcNCHby.jpg", "link":"https://ctrl.laotv.la/live/Bsport2/index.m3u8"},
 {"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
 {"name":"discover-HD", "image":"https://i.imgur.com/0VtMkEm.jpg", "link":"http://103.186.77.21:8000/play/a040/index.m3u8"}, 
 {"name":"CNN", "image":"https://i.imgur.com/AL4lrxk.jpg", "link":"http://103.186.77.21:8000/play/a03p/index.m3u8"}, 
