--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 [{"name":"Ture Sport 3", "image":"https://i.imgur.com/oXcO0hg.jpg", "link":"https://ctrl.laotv.la/live/TrueSport3/index.m3u8"},
 {"name":"Bein Sport 2 THI", "image":"https://i.imgur.com/TcNCHby.jpg", "link":"https://ctrl.laotv.la/live/Bsport2/index.m3u8"},
 {"name":"Bein Sport 7", "image":"https://i.imgur.com/9ZG43tP.jpg", "link":"http://node01.nntv.az:8153/ch6/ch6.hi.m3u8"},
+{"name":"Love Nature 4K", "image":"https://i.imgur.com/cftQg9T.jpg", "link":"http://ottshow.net:80/live/TeslaVision@Black_M/3dSkys1spf34fe2208asd/68948.ts"},
 {"name":"Dicovery3", "image":"https://i.imgur.com/nRreZeh.jpg", "link":"https://edge1.laotv.la/live/Discovery/sc-gaFECQ/index.m3u8"},
 {"name":"Animal Planet", "image":"https://i.imgur.com/Ad6n0UY.jpg", "link":"https://raw.githubusercontent.com/kaziemamul/html1/main/KaziTV/Animal_Planet.m3u8"},
 {"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
