--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 {"name":"Animal Planet", "image":"https://i.imgur.com/Ad6n0UY.jpg", "link":"https://raw.githubusercontent.com/kaziemamul/html1/main/KaziTV/Animal_Planet.m3u8"},
 {"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
 {"name":"discover-HD", "image":"https://i.imgur.com/0VtMkEm.jpg", "link":"http://103.186.77.21:8000/play/a040/index.m3u8"}, 
+{"name":"CNN", "image":"https://i.imgur.com/AL4lrxk.jpg", "link":"https://cnn-cnninternational-1-eu.rakuten.wurl.tv/playlist.m3u8"}, 
 {"name":"CNN", "image":"https://i.imgur.com/AL4lrxk.jpg", "link":"http://103.186.77.21:8000/play/a03p/index.m3u8"}, 
 {"name":"Thebe", "image":"https://i.imgur.com/Du2zqkX.jpg", "link":"https://live.lwcdn.com/live/amlst:ALH8QFrg_all/playlist.m3u8"},
 {"name":"xplore", "image":"https://i.imgur.com/eDy383K.jpg", "link":"https://xplore-roku.amagi.tv/playlist1080-p.m3u8"}, 
