--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-[{"name":"Ture Sport 3", "image":"https://i.imgur.com/oXcO0hg.jpg", "link":"https://ctrl.laotv.la/live/TrueSport3/index.m3u8"},
+[{"name":"Bein Sport HD 2", "image":"https://i.imgur.com/fc6wYJ1.jpg", "link":"https://edge1.laotv.la/live/Bsport2/sc-gaFECQ/v1_index.m3u8"},
+{"name":"Ture Sport 3", "image":"https://i.imgur.com/oXcO0hg.jpg", "link":"https://ctrl.laotv.la/live/TrueSport3/index.m3u8"},
 {"name":"Bein Sport 2 THI", "image":"https://i.imgur.com/TcNCHby.jpg", "link":"https://ctrl.laotv.la/live/Bsport2/index.m3u8"},
 {"name":"Bein Sport 7", "image":"https://i.imgur.com/sZcksVS.jpg", "link":"http://node01.nntv.az:8153/ch6/ch6.hi.m3u8"},
 {"name":"Dicovery3", "image":"https://i.imgur.com/nRreZeh.jpg", "link":"https://edge1.laotv.la/live/Discovery/sc-gaFECQ/index.m3u8"},
