--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 [{"name":"Bein Sport HD 2", "image":"https://i.imgur.com/fc6wYJ1.jpg", "link":"https://edge1.laotv.la/live/Bsport2/sc-gaFECQ/v1_index.m3u8"},
 {"name":"Ture Sport 3", "image":"https://i.imgur.com/oXcO0hg.jpg", "link":"https://ctrl.laotv.la/live/TrueSport3/index.m3u8"},
 {"name":"Bein Sport 2 THI", "image":"https://i.imgur.com/TcNCHby.jpg", "link":"https://ctrl.laotv.la/live/Bsport2/index.m3u8"},
+{"name":"Discovery Tamil", "image":"https://i.imgur.com/LF10PVQ.jpg", "link":"http://watchindia.net:8880/live/17524/03503/2085.ts"},
 {"name":"Dicovery3", "image":"https://i.imgur.com/nRreZeh.jpg", "link":"https://edge1.laotv.la/live/Discovery/sc-gaFECQ/index.m3u8"},
 {"name":"Animal Planet", "image":"https://i.imgur.com/Ad6n0UY.jpg", "link":"https://raw.githubusercontent.com/kaziemamul/html1/main/KaziTV/Animal_Planet.m3u8"},
 {"name":"diseovery", "image":"https://i.imgur.com/lpHqmsH.jpg", "link":"http://bdta.pro:80/84alcantara.ed/4tDp8T/71864.m3u8"},
