--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-[{"name":"Bein Sport HD 2", "image":"https://i.imgur.com/fc6wYJ1.jpg", "link":"https://edge1.laotv.la/live/Bsport2/sc-gaFECQ/v1_index.m3u8"},
+[{"name":"Tennis 2 Sony 2", "image":"https://i.imgur.com/UeuiHiL.jpg", "link":"https://dai.google.com/linear/hls/event/V9h-iyOxRiGp41ppQScDSQ/master.m3u8"},
+{"name":"Tennis 1 Sony3", "image":"https://i.imgur.com/UeuiHiL.jpg", "link":"https://dai.google.com/linear/hls/event/ltsCG7TBSCSDmyq0rQtvSA/master.m3u8"},
+{"name":"Bein Sport HD 2", "image":"https://i.imgur.com/fc6wYJ1.jpg", "link":"https://edge1.laotv.la/live/Bsport2/sc-gaFECQ/v1_index.m3u8"},
 {"name":"Ture Sport 3", "image":"https://i.imgur.com/oXcO0hg.jpg", "link":"https://ctrl.laotv.la/live/TrueSport3/index.m3u8"},
 {"name":"Bein Sport 2 THI", "image":"https://i.imgur.com/TcNCHby.jpg", "link":"https://ctrl.laotv.la/live/Bsport2/index.m3u8"},
 {"name":"Discovery Tamil", "image":"https://i.imgur.com/LF10PVQ.jpg", "link":"http://watchindia.net:8880/live/17524/03503/2085.ts"},
