--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-[{"name":"Tennis 2 Sony 2", "image":"https://i.imgur.com/UeuiHiL.jpg", "link":"https://dai.google.com/linear/hls/event/V9h-iyOxRiGp41ppQScDSQ/master.m3u8"},
-{"name":"Tennis 1 Sony3", "image":"https://i.imgur.com/UeuiHiL.jpg", "link":"https://dai.google.com/linear/hls/event/ltsCG7TBSCSDmyq0rQtvSA/master.m3u8"},
-{"name":"Bein Sport HD 2", "image":"https://i.imgur.com/fc6wYJ1.jpg", "link":"https://edge1.laotv.la/live/Bsport2/sc-gaFECQ/v1_index.m3u8"},
+[{"name":"Bein Sport HD 2", "image":"https://i.imgur.com/fc6wYJ1.jpg", "link":"https://edge1.laotv.la/live/Bsport2/sc-gaFECQ/v1_index.m3u8"},
 {"name":"Ture Sport 3", "image":"https://i.imgur.com/oXcO0hg.jpg", "link":"https://ctrl.laotv.la/live/TrueSport3/index.m3u8"},
 {"name":"Bein Sport 2 THI", "image":"https://i.imgur.com/TcNCHby.jpg", "link":"https://ctrl.laotv.la/live/Bsport2/index.m3u8"},
 {"name":"Dicovery3", "image":"https://i.imgur.com/nRreZeh.jpg", "link":"https://edge1.laotv.la/live/Discovery/sc-gaFECQ/index.m3u8"},
@@ -20,7 +18,5 @@
 {"name":"Pakistan", "image":"https://i.imgur.com/8bL3jwP.jpg", "link":"https://livecdn.live247stream.com/discoverpakistan/tapmad/playlist.m3u8"},
 {"name":"Tennis", "image":"https://i.imgur.com/U7QBSRj.jpg", "link":"https://tennischannel-intl-samsung-uk.amagi.tv/playlist720_p.m3u8"}, 
 {"name":"Sony 1", "image":"https://i.imgur.com/x5Wto4b.jpg", "link":"https://dai.google.com/linear/hls/event/6WhVNGKTRXyu588zZv1Lkg/master.m3u8"}, 
-{"name":"Sony 2", "image":"https://i.imgur.com/CQ8NZTv.jpg", "link":"https://dai.google.com/linear/hls/event/LK-ik89MQIi_pWBbg74KNQ/master.m3u8"}, 
-{"name":"Sony 5", "image":"https://i.imgur.com/Lw1Enwp.jpg", "link":"https://dai.google.com/linear/hls/event/r-eLp41YTHWTagvQSXFtAQ/master.m3u8"}, 
 {"name":"Dubai Sport", "image":"https://i.imgur.com/Qy0Qgkg.jpg", "link":"https://dmitwlvvll.cdn.mangomolo.com/dubaisportshd/smil:dubaisportshd.smil/index.m3u8"}, 
 {"name":"Golf", "image":"https://i.imgur.com/04Ao4HK.jpg", "link":"http://162.250.201.58:6211/pk/ONEGOLF/index.m3u8"}]
