--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-[{"name":"Bein Sport HD 2", "image":"https://i.imgur.com/fc6wYJ1.jpg", "link":"https://edge1.laotv.la/live/Bsport2/sc-gaFECQ/v1_index.m3u8"},
-{"name":"Ture Sport 3", "image":"https://i.imgur.com/oXcO0hg.jpg", "link":"https://ctrl.laotv.la/live/TrueSport3/index.m3u8"},
-{"name":"Bein Sport 2 THI", "image":"https://i.imgur.com/TcNCHby.jpg", "link":"https://ctrl.laotv.la/live/Bsport2/index.m3u8"},
-{"name":"Dicovery3", "image":"https://i.imgur.com/nRreZeh.jpg", "link":"https://edge1.laotv.la/live/Discovery/sc-gaFECQ/index.m3u8"},
-{"name":"Animal Planet", "image":"https://i.imgur.com/Ad6n0UY.jpg", "link":"https://raw.githubusercontent.com/kaziemamul/html1/main/KaziTV/Animal_Planet.m3u8"},
-{"name":"discover-HD", "image":"https://i.imgur.com/0VtMkEm.jpg", "link":"http://103.186.77.21:8000/play/a040/index.m3u8"}, 
-{"name":"CNN", "image":"https://i.imgur.com/AL4lrxk.jpg", "link":"https://cnn-cnninternational-1-eu.rakuten.wurl.tv/playlist.m3u8"},  
+[{"name":"CNN", "image":"https://i.imgur.com/AL4lrxk.jpg", "link":"https://cnn-cnninternational-1-eu.rakuten.wurl.tv/playlist.m3u8"},  
 {"name":"Thebe", "image":"https://i.imgur.com/Du2zqkX.jpg", "link":"https://live.lwcdn.com/live/amlst:ALH8QFrg_all/playlist.m3u8"},
 {"name":"xplore", "image":"https://i.imgur.com/eDy383K.jpg", "link":"https://xplore-roku.amagi.tv/playlist1080-p.m3u8"}, 
 {"name":"Redbull", "image":"https://i.imgur.com/Ab1sh0M.jpg", "link":"http://rbmn-live.akamaized.net/hls/live/590964/BoRB-AT/master_928.m3u8"}, 
